<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.Login" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/horizontal_padding">

        <EditText
            android:id="@+id/email_edit_text"
            style="@style/edit_text_style"
            android:hint="@string/email_label" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_margin"
            android:ems="10"
            android:hint="@string/password_label"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vertical_margin"
            android:padding="@dimen/vertical_margin">

            <Button
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/horizontal_margin"
                android:text="@string/sign_up" />
        </RelativeLayout>

    </LinearLayout>

</layout>