<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.Welcome" />
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/horizontal_padding"
        tools:context=".welcome">

        <TextView
            style="@style/style_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/textView2"
            style="@style/style_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_2" />

        <Button
            android:id="@+id/instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/instruction_button" />
    </LinearLayout>
</layout>